openshift-network-policy-example/deny-all-policy.yaml
# This NetworkPolicy is deny access to all pods. 
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
  podSelector: {}
